--- a/src/App.css
+++ b/src/App.css
@@ -1,5 +1,11 @@
 .App {}
 
-button {
-    display: block;
+.container {
+    width: auto;
+    max-width: 680px;
+    padding: 0 15px;
+}
+
+label {
+  margin-bottom: .5rem;
 }
