--- a/src/App.css
+++ b/src/App.css
@@ -1,5 +1,11 @@
 .App {}
 
+body {
+    color: #fbfbfb;
+    background-color: #1d1d1d;
+    font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, "Helvetica Neue", Arial, sans-serif, "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol";
+}
+
 .container {
     width: auto;
     max-width: 680px;
@@ -7,5 +13,26 @@
 }
 
 label {
-  margin-bottom: .5rem;
+    margin-bottom: .5rem;
+}
+
+label, .btn {
+    font-weight: 600;
+}
+
+.input-group {
+  padding-bottom: 1.3rem;
+}
+
+.form-control {
+    background-color: #fbfbfb;
+}
+
+.form-control:focus {
+    box-shadow: 0 0 0 0.35rem rgb(13 110 253)
+}
+
+footer {
+    padding-left: 1.2rem;
+    border-top: 2px solid #595959;
 }
