--- a/src/App.css
+++ b/src/App.css
@@ -1,23 +1,24 @@
 .App {}
 
 body {
-    color: #fbfbfb;
-    background-color: #1d1d1d;
-    font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, "Helvetica Neue", Arial, sans-serif, "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol";
+  color: #fbfbfb;
+  background-color: #1d1d1d;
+  font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, "Helvetica Neue", Arial, sans-serif, "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol";
 }
 
 .container {
-    width: auto;
-    max-width: 680px;
-    padding: 0 15px;
+  width: auto;
+  max-width: 680px;
+  padding: 0 15px;
 }
 
 label {
-    margin-bottom: .5rem;
+  margin-bottom: .5rem;
 }
 
-label, .btn {
-    font-weight: 600;
+.btn,
+label {
+  font-weight: 600;
 }
 
 .form-group {
@@ -25,14 +26,14 @@ label, .btn {
 }
 
 .form-control {
-    background-color: #fbfbfb;
+  background-color: #fbfbfb;
 }
 
 .form-control:focus {
-    box-shadow: 0 0 0 0.35rem rgb(13 110 253)
+  box-shadow: 0 0 0 .35rem rgb(13 110 253);
 }
 
 footer {
-    padding-left: 1.2rem;
-    border-top: 2px solid #595959;
+  padding-left: 1.2rem;
+  border-top: 2px solid #595959;
 }
